<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.pro.luis.appGestaoDeEnsino.FormularioSubstitutivaActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/titulo_substitutiva"
        android:textAlignment="center"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </TextView>

    <EditText
        android:id="@+id/etNomeAluno"
        android:layout_width="353dp"
        android:layout_height="59dp"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:hint="@string/digite_o_nome_do_aluno"
        android:inputType="textCapSentences"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etMatricula"
        android:layout_width="353dp"
        android:layout_height="59dp"
        android:layout_marginTop="56dp"
        android:ems="10"
        android:hint="@string/digite_a_matricula_do_aluno"
        android:inputType="textCapSentences"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNomeAluno" />

    <EditText
        android:id="@+id/etNota1"
        android:layout_width="353dp"
        android:layout_height="59dp"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:hint="@string/digite_a_N1_do_aluno"
        android:inputType="textCapSentences"
        android:maxLength="14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etMatricula" />

    <EditText
        android:id="@+id/etNota2"
        android:layout_width="353dp"
        android:layout_height="59dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/digite_a_N2_do_aluno"
        android:inputType="textCapSentences"
        android:maxLength="14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNota1" />

    <Button
        android:id="@+id/btnSalvar"
        android:layout_width="192dp"
        android:layout_height="36dp"
        android:layout_marginTop="56dp"
        android:backgroundTint="#00f"
        android:text="@string/salvar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNota2" />

</androidx.constraintlayout.widget.ConstraintLayout>